--- a/src/assets/styles/reset.scss
+++ b/src/assets/styles/reset.scss
@@ -7,6 +7,13 @@
 // 2. 定义页面的默认字号
 // 3. 定义页面的默认行高
 // 4. 定义页面的默认字体
+*,
+:after,
+:before {
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box
+}
 
 body,
 html {
@@ -14,6 +21,8 @@ html {
   padding: 0;
   width: 100%;
   height: 100%;
+  font-size: 12px;
+  color: #191f25;
 }
 
 // 1. 清除某些元素在不同浏览器下内外补白不同造成的影响
